--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,17 +4,21 @@
   box-sizing: border-box;
 }
 
-body{
+body {
+  background-color: #fff
+}
+
+.register-background {
   background-image: url("../img/Tokopedia-Regist.jpg");
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
 }
 
-#logo1 {  
-    text-align: center;
-    width: 560px;
-    margin: 0 auto;
+#logo1 {
+  text-align: center;
+  width: 560px;
+  margin: 0 auto;
 }
 
 #btnWelcome {
@@ -34,7 +38,7 @@ h5 {
 }
 
 
-.spawn{
+.spawn {
   opacity: 1;
 }
 
@@ -81,7 +85,7 @@ input[type="radio"] {
   padding: 20px;
 }
 
-.select-input{
+.select-input {
   width: 50%;
 }
 
@@ -400,7 +404,7 @@ label {
   padding-bottom: 20px;
 }
 
-.regist-button{
+.regist-button {
   position: relative;
   right: 320px;
   width: 820px;
@@ -474,7 +478,7 @@ label {
   border-radius: 3px;
   color: white;
   font-weight: bold;
-  background-color: rgba(0, 255, 0, 0.651);
+  background-color: rgba(255, 0, 0, 0.651);
   border-color: rgb(212, 212, 212);
 }
 
@@ -486,6 +490,10 @@ label {
 #phone::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.sidebar .nav p {
+  font-weight: 500;
 }
 
 #colon {
@@ -522,7 +530,7 @@ label {
   margin: 0 auto;
 }
 
-#main-email{
+#main-email {
   position: relative;
   left: 0;
   margin: 0 auto;
@@ -533,48 +541,52 @@ label {
 
 @media only screen and (min-Width:990px) {
   #logo1 {
-  margin-left: 75px;
+    margin-left: 75px;
   }
 }
+
 @media only screen and (max-Width:990px) {
-  .filter{
+  .filter {
     visibility: hidden;
   }
+
   #navbutton {
     position: relative;
     bottom: 0px;
   }
 
-  #navbarYear{
+  #navbarYear {
     cursor: pointer;
     position: relative;
     left: 48px;
-    color:#000;
+    color: #000;
     opacity: 0.8;
-    margin-bottom: 8px; 
+    margin-bottom: 8px;
   }
 
-  #navbarType{
+  #navbarType {
     cursor: pointer;
     position: relative;
     left: 45px;
-    color:#000;
+    color: #000;
     opacity: 0.8;
     margin-bottom: 8px;
   }
-  #navbarQ{
+
+  #navbarQ {
     cursor: pointer;
     position: relative;
     left: 30px;
-    color:#000;
+    color: #000;
     opacity: 0.8;
     margin-bottom: 8px;
   }
-  #navbarM{
+
+  #navbarM {
     cursor: pointer;
     position: relative;
     left: 30px;
-    color:#000;
+    color: #000;
     opacity: 0.8;
   }
 }
@@ -589,6 +601,7 @@ label {
     border-radius: 4.2px;
     box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
   }
+
   #emailWelcome {
     position: relative;
     padding-top: 20px;
@@ -599,6 +612,7 @@ label {
     right: 215px;
     bottom: 25px;
   }
+
   #interviewFirst {
     cursor: pointer;
     position: relative;
@@ -613,10 +627,12 @@ label {
     position: relative;
     bottom: 25px;
   }
+
   #emailWelcome {
     position: relative;
     padding-top: 20px;
   }
+
   #interviewFirst {
     cursor: pointer;
     position: relative;
@@ -624,6 +640,7 @@ label {
     padding-top: 20px;
     padding-bottom: 20px;
   }
+
   .containerRegist {
     width: 120%;
   }
@@ -634,6 +651,7 @@ label {
     width: 100%;
     padding-right: 0;
   }
+
   .containerRegist {
     width: 180%;
   }
@@ -646,6 +664,7 @@ label {
     right: 55px;
     bottom: 25px;
   }
+
   #interviewFirst {
     cursor: pointer;
     position: relative;
@@ -658,6 +677,7 @@ label {
     position: relative;
     padding-top: 20px;
   }
+
   .containerRegist {
     padding: 2em 3em 2em 3em;
     margin: 0em auto;
@@ -674,10 +694,12 @@ label {
     width: 100%;
     padding-right: 0;
   }
+
   #emailWelcome {
     position: relative;
     padding-top: 20px;
   }
+
   .containerRegist {
     width: 200%;
   }
@@ -688,6 +710,7 @@ label {
     width: 100%;
     padding-right: 0;
   }
+
   #emailWelcome {
     position: relative;
     padding-top: 20px;
