--- a/src/assets/sass/dashboardEdit.css
+++ b/src/assets/sass/dashboardEdit.css
@@ -27,15 +27,26 @@
    -webkit-user-drag: none;
  }
 
+ .footer-container {
+   background-color: #f8f8f8;
+   padding-left: 20px;
+ }
+
+ .footer-fluid {
+   width: 100%;
+   border-top: 1px solid rgba(0, 0, 0, 0.1);
+   background-color: #f8f8f8;
+ }
+
  #basic-nav-dropdown {
    position: relative;
    bottom: 8px;
  }
 
  .sidebar .nav li>a {
-   color: #FFFFFF;
+   color: #000;
    margin: 5px 15px;
-   opacity: .86;
+   opacity: .7;
    border-radius: 4px;
  }
 
@@ -45,13 +56,14 @@
  .sidebar .nav li.open>a:hover {
    /* for active nav */
    background: rgba(255, 255, 255, 0.13);
+   color: #ff5722;
    opacity: 1;
  }
 
  .sidebar .nav li.active>a {
    color: rgb(255, 255, 255);
    opacity: 1;
-   background: rgba(0, 255, 0, 0.651);
+   background: #42b549;
  }
 
  .sidebar:after,
@@ -96,7 +108,8 @@
  }
 
  .main-panel {
-   background-image: url("../img/Tokopedia-Regist.jpg");
+   background-color: #fff;
+   /* background-image: url("../img/Tokopedia-Regist.jpg"); */
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
@@ -104,17 +117,22 @@
    float: right;
  }
 
+ .sidebar-text {
+   font-family: PT Sans,roboto;
+   font-size: 13px !important;
+ }
+
  .filter-col {
    float: left !important;
  }
 
- .filter-container {
+ .filter-container { 
    display: none;
-   background-color: rgba(255, 255, 255, 0.96);
+   background-color: #f4f4f4;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    z-index: 999;
    position: fixed;
-   top: 50px;
+   top: 58px;
    left: 260px;
    width: 100%;
    height: 65px;
@@ -125,8 +143,8 @@
    font-size: 22px;
  }
 
- .filter-icon:hover{
-  color: #47851f;
+ .filter-icon:hover {
+   color: #47851f;
  }
 
  .filter-spawn {
@@ -134,7 +152,7 @@
    right: 30px;
    bottom: 5px;
    font-family: Alef;
-   font-size: 18px;
+   font-size: 15px;
    color: #7d7d7d;
    opacity: 0;
    cursor: default;
@@ -254,12 +272,19 @@
  }
 
  .footer {
+   background-color: #ffffff;
    width: 100%;
  }
 
  .span-card {
    left: 75px;
    position: absolute;
+ }
+
+ .sidebar-wrapper {
+   background-color: #efefef;
+   border-right: 1px solid rgba(0, 0, 0, 0.1);
+   border-top: 1px solid rgba(0, 0, 0, 0.1);
  }
 
  #modalBtn {
@@ -349,13 +374,14 @@
    } */
  }
 
- @media only screen and (max-width:990px) {  
+ @media only screen and (max-width:990px) {
    .card .ct-chart {
      margin: 30px 0 30px;
      height: 625px;
    }
 
    .navbar-header {
+     cursor: default;
      width: 900px;
    }
 
