--- a/src/assets/sass/light-bootstrap-dashboard.css
+++ b/src/assets/sass/light-bootstrap-dashboard.css
@@ -1016,7 +1016,6 @@ body > .navbar-collapse[data-color="purple"]:after {
 .checkbox label::before,
 .checkbox label::after {
   font-family: 'FontAwesome';
-  content: "\f096";
   display: inline-block;
   position: absolute;
   width: 20px;
@@ -1041,12 +1040,12 @@ body > .navbar-collapse[data-color="purple"]:after {
 
 .checkbox input[type="checkbox"],
 .radio input[type="radio"] {
-  opacity: 0;
+  opacity: 1;
   margin-left: 0; }
 
 .checkbox input[type="checkbox"]:checked + label::after {
   font-family: 'FontAwesome';
-  content: "\f046"; }
+  content: ""; }
 
 .checkbox input[type="checkbox"]:checked + label::after {
   color: #1DC7EA; }
@@ -1111,7 +1110,6 @@ body > .navbar-collapse[data-color="purple"]:after {
 .radio label::before,
 .radio label::after {
   font-family: 'FontAwesome';
-  content: "\f10c";
   font-size: 20px;
   height: 20px;
   width: 20px;
@@ -1128,7 +1126,6 @@ body > .navbar-collapse[data-color="purple"]:after {
 
 .radio input[type="radio"]:checked + label::after {
   font-family: 'FontAwesome';
-  content: "\f192";
   color: #DDDDDD; }
 
 .radio input[type="radio"]:checked + label::after {
